build: 升级 Spring Boot 3.5.8 -> 3.5.16 (T-A0-1)
3.5 线最后一个 OSS 版本, 作为升级 SB4.1 前的稳定基线。
mvn clean compile 全 69 模块 BUILD SUCCESS; preview 告警为 0。
deprecation 告警清单记录于变更 log(A 类框架自有过渡代码/B 类第三方待升级/C 类 JDK 清理)。